force-app/main/default/objects/Itinerary_Request__c/Itinerary_Request__c.object-meta.xml
<CustomObject>
    <label>Itinerary Request</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Reference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itineraries Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>