force-app/main/default/objects/Itinerary_Request__c/fields/Destination_list__c.field-meta.xml
<CustomField>
    <fullName>Destination_list__c</fullName>
    <description>List of Destination</description>
    <label>Destination list</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>