force-app/main/default/objects/Itinerary_Request__c/fields/Duration_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>Duration_Of_Day__c</fullName>
    <formula>Travel_end_date__c  -  Travel_start_date__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Of Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>