force-app/main/default/objects/Itinerary_Request__c/fields/Duration_on_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_on_days__c</fullName>
    <description>Duration Day</description>
    <label>Duration on days [DEPRICATED]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>