force-app/main/default/objects/Itinerary_Request__c/fields/Itinerary_Id__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary Id</label>
    <referenceTo>Itinerary_Listing__c</referenceTo>
    <relationshipLabel>Itineraries Request</relationshipLabel>
    <relationshipName>Itineraries_Request</relationshipName>
    <type>Lookup</type>
</CustomField>