force-app/main/default/objects/Itinerary_Request__c/fields/No_of_Adults_12__c.field-meta.xml
<CustomField>
    <fullName>No_of_Adults_12__c</fullName>
    <label>No of Adults (12+)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>