force-app/main/default/objects/Itinerary_Request__c/fields/No_of_Children_under_12__c.field-meta.xml
<CustomField>
    <fullName>No_of_Children_under_12__c</fullName>
    <description>Under 12 Children</description>
    <label>No of Children (under 12)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>