force-app/main/default/objects/Itinerary_Request__c/fields/Primary_Destination__c.field-meta.xml
<CustomField>
    <fullName>Primary_Destination__c</fullName>
    <description>Destination</description>
    <label>Primary Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>