force-app/main/default/objects/Itinerary_Request__c/fields/Request_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Request_DateTime__c</fullName>
    <description>Date And Time of  Itinerary  Request</description>
    <label>Request DateTime</label>
    <type>DateTime</type>
</CustomField>