force-app/main/default/objects/Itinerary_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Of Itinerary</description>
    <label>Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Itineraries Request</relationshipLabel>
    <relationshipName>Itineraries_Request</relationshipName>
    <type>Lookup</type>
</CustomField>