force-app/main/default/objects/Itinerary_Request__c/fields/Travel_end_date__c.field-meta.xml
<CustomField>
    <fullName>Travel_end_date__c</fullName>
    <description>End Date for Travelling</description>
    <label>Travel end date</label>
    <type>Date</type>
</CustomField>