force-app/main/default/objects/Itinerary_Request__c/fields/Travel_start_date__c.field-meta.xml
<CustomField>
    <fullName>Travel_start_date__c</fullName>
    <description>Start Date For Travelling</description>
    <label>Travel start date</label>
    <type>Date</type>
</CustomField>