force-app/main/default/objects/Itinerary_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>No_of_Adults_12__c</columns>
    <columns>No_of_Children_under_12__c</columns>
    <columns>Travel_end_date__c</columns>
    <columns>Travel_start_date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Primary_Destination__c</columns>
    <columns>Request_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>